# ocamlox

./: README.org  dev-env  dune-project  manifest.scm  ocamlox.opam
lib/: ast.ml  ast.mli  ast_tests.ml  ast_type.ml  ast_type.mli  dune  eval.ml  eval.mli  lexer.ml  lexer.mli  ocamlox.ml  ocamlox.mli  parser.mly  reader_tests.ml  token.ml
lib/eval/: auth.ml  dict.ml  dict.mli  dune  env.ml  env.mli  error.ml  eval.ml  eval.mli  init_fixer.ml  init_fixer.mli  interpret.ml  interpret.mli  obj.ml  obj.mli  pass.ml  resolver.ml  resolver.mli  returns_check.ml  returns_check.mli
lib/reader/: ast.ml  ast.mli  ast_type.ml  ast_type.mli  dune  lexer.ml  parser.mly  reader.ml  reader.mli  token.ml  token.mli
test/: assignment.ml  block.ml  bool.ml  call.ml  class.ml  closure.ml  comments.ml  constructor.ml  dune  field.ml  function.ml  if.ml  inheritance.ml  lib.ml  logical_operator.ml  method.ml  nil.ml  number.ml  operator.ml  print.ml  regression.ml  return.ml  string.ml  super.ml  test_ocamlox.ml  this.ml  variable.ml  while.ml
